--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "url":          "https://github.com/eventEmitter/ee-lru-cache/issues"
     }
     , "dependencies": {
-          "ee-class":   "*"
-        , "ee-event":   "*"
-        , "ee-log":     "*"
+          "ee-class":           "0.4.0"
+        , "ee-event-emitter":   "0.1.x"
+        , "ee-log":             "0.2.x"
     }
     , "devDependencies": {}
     , "optionalDependencies": {}
