--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name":           "ee-lru-cache"
     , "description":    "LRU Memory Cache ( last recent used )"
-    , "version":        "0.1.2"
+    , "version":        "0.1.3"
     , "homepage":       "https://github.com/eventEmitter/ee-lru-cache"
     , "author":         "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "repository": {
@@ -14,7 +14,7 @@
         "url":          "https://github.com/eventEmitter/ee-lru-cache/issues"
     }
     , "dependencies": {
-          "ee-class":           "0.4.0"
+          "ee-class":           "0.4.x"
         , "ee-event-emitter":   "0.1.x"
         , "ee-log":             "0.2.x"
     }
